--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "react": "^16.4.1",
         "react-dom": "^16.4.1",
         "react-router-dom": "^4.3.1",
-        "react-scripts": "1.1.4"
+        "react-scripts": "1.1.4",
+        "router": "^1.3.2"
     },
     "scripts": {
         "start": "react-scripts start",
