--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@types/react": "^16.4.2",
         "axios": "^0.18.0",
         "react": "^16.4.1",
         "react-dom": "^16.4.1",
