--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "lodash.debounce": "^4.0.8",
         "react": "^16.4.1",
         "react-dom": "^16.4.1",
+        "react-helmet": "^5.2.0",
         "react-router-dom": "^4.3.1",
         "react-scripts": "1.1.4",
         "router": "^1.3.2"
